Worked on fixing the fonts, and making sure everything works.

--- a/coffee.html
+++ b/coffee.html
@@ -84,21 +84,21 @@
             <img src="img/Product/snapbythree.avif" alt="" style="width:100%">
             <h1>Black Coffee</h1>
             <p class="price">$1.99</p>
-            <p>No Sweetening</p>
+            <p class="product-desc">No Sweetening</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/tabitha-turner.avif" alt="" style="width:100%">
             <h1>Cold Brew</h1>
             <p class="price">$4.55</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/valeriia-miller.avif" alt="" style="width:100%">
             <h1> Latte</h1>
             <p class="price">$5.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
     </div>
