--- a/error.html
+++ b/error.html
@@ -21,7 +21,7 @@ a img{
 <body>
     <nav id="top" class="navbar">
         <section class="nav">
-            <img src="img/Logos/HivemindLogo.png" class="brand-logo" alt="">
+            <img src="img/Logos/HivemindLogo.avif" class="brand-logo" alt="">
             <div class="items">
                 <div class="search">
                     <input type="text" class="search-box" placeholder="Search Product">
@@ -35,7 +35,7 @@ a img{
                         title="Close">x</span>
                     <form class="modal-content" action="#">
                         <div class="container">
-                            <img src="img/Logos/HivemindLogo.png" class="logo" alt="">
+                            <img src="img/Logos/HivemindLogo.avif" class="logo" alt="">
                             <div>
                                 <h2> Sign Up</h2>
                                 <p> Please Fill out this Form to Create An Account</p>
