--- a/food.html
+++ b/food.html
@@ -84,28 +84,28 @@
             <img src="img/Product/alina-karpenko@0.33x.avif" alt="" style="width:100%">
             <h1>Cinnamon Muffins</h1>
             <p class="price">$1.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/american-heritage@0.33x.avif" alt="" style="width:100%">
             <h1>Chocolate Cookies</h1>
             <p class="price">$.99</p>
-            <p>Almonds Inside</p>
+            <p class="product-desc">Almonds Inside</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/ari-spada.avif" alt="" style="width:100%">
             <h1> Chocolate Muffins</h1>
             <p class="price">$1.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/fallon-michael.avif" alt="" style="width:100%">
             <h1>Cranberry Muffins</h1>
             <p class="price">$1.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
     </div>
@@ -115,28 +115,28 @@
             <img src="img/Product/gayatri-malhotra.avif" alt="" style="width:100%">
             <h1>Sugar Cookies</h1>
             <p class="price">$1.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/joshua-flores.avif" alt="" style="width:100%">
             <h1> Blueberry Muffins</h1>
             <p class="price">$1.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/madison-kaminski.avif" alt="" style="width:100%">
             <h1> PB Blossom</h1>
             <p class="price">$1.99</p>
-            <p>Hersheys kisses on a peanut butter cookie</p>
+            <p class="product-desc">Chocolate Drops on a Peanut Butter Cookie</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/michael-chiara.avif" alt="" style="width:100%">
             <h1> Chocolate Chip</h1>
             <p class="price">$1.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
     </div>
@@ -145,24 +145,25 @@
             <img src="img/Product/steven-weeks.avif" alt="" style="width:100%">
             <h1> Macarons</h1>
             <p class="price">$1.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/oriol-portell.avif" alt="" style="width:100%">
             <h1>Chocolate Muffins</h1>
             <p class="price">$1.99</p>
-            <p>Double Chocolate</p>
+            <p class="product-desc">Double Chocolate</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/pexels-terrance-barksdale-8837096.avif" alt="" style="width:100%">
-            <h1> Oatmeal Rasian</h1>
+            <h1 class="product-desc"> Oatmeal Raisin</h1>
             <p class="price">$1.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
     </div>
+    
 </section>
     <!-- InstanceEndEditable -->
     <footer>
