--- a/tea.html
+++ b/tea.html
@@ -31,7 +31,7 @@
                         title="Close">x</span>
                     <form class="modal-content" action="#">
                         <div class="container">
-                            <img src="img/Logos/HivemindLogo.png" class="logo" alt="">
+                            <img src="img/Logos/HivemindLogo.avif" class="logo" alt="">
                             <div>
                                 <h2> Sign Up</h2>
                                 <p> Please Fill out this Form to Create An Account</p>
@@ -82,23 +82,23 @@
     <div class="row">
         <div class="column card">
             <img src="img/Product/ann.avif" alt="" style="width:100%">
-            <h1>Mathca Tea</h1>
+            <h1>Matcha Tea</h1>
             <p class="price">$5.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/manki-kim.avif" alt="" style="width:100%">
             <h1>Sweet Tea</h1>
             <p class="price">$3.99</p>
-            <p></p>
+            <p class="product-desc">Black tea with cubes of sugar and Honey</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
             <img src="img/Product/akhilesh-sharma.avif" alt="" style="width:100%">
             <h1>Black Tea</h1>
             <p class="price">$3.99</p>
-            <p>...</p>
+            <p class="product-desc">...</p>
             <p><button>Add to Cart</button></p>
         </div>
     </div>
