Format fixes, and Fixing some links

--- a/coffee.html
+++ b/coffee.html
@@ -79,37 +79,37 @@
     </header>
     <!-- InstanceBeginEditable name="Content" -->
     <section class="cc">
-    <div class="row">
-        <div class="column card">
-            <img src="img/Product/snapbythree.avif" alt="" style="width:100%">
-            <h1>Black Coffee</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">No Sweetening</p>
-            <p><button>Add to Cart</button></p>
+        <div class="row">
+            <div class="column card">
+                <img src="img/Product/snapbythree.avif" alt="" style="width:100%">
+                <h1>Black Coffee</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">No Sweetening</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/tabitha-turner.avif" alt="" style="width:100%">
+                <h1>Cold Brew</h1>
+                <p class="price">$4.55</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/valeriia-miller.avif" alt="" style="width:100%">
+                <h1> Latte</h1>
+                <p class="price">$5.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
         </div>
-        <div class="column card">
-            <img src="img/Product/tabitha-turner.avif" alt="" style="width:100%">
-            <h1>Cold Brew</h1>
-            <p class="price">$4.55</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/valeriia-miller.avif" alt="" style="width:100%">
-            <h1> Latte</h1>
-            <p class="price">$5.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-    </div>
-</section>
+    </section>
     <!-- InstanceEndEditable -->
     <footer>
         <div class="footer-content">
             <img src="img/Logos/HivemindLogo.avif" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
                 <ul class="category">
-              
+
                 </ul>
             </div>
         </div>
@@ -124,7 +124,9 @@
             <a href="#top" class="social-link"> Back To Top</a>
         </div>
         <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022. All images were
-            found on<dfn title="The photos on Unsplash are free to use and can be used for most commercial, personal projects, and for editorial use. You do not need to ask permission from or provide credit to the photographer or Unsplash, although it is appreciated when possible."> Unsplash,</dfn> <a href="credit.html">here is credit</a> to them all.
+            found on<dfn
+                title="The photos on Unsplash are free to use and can be used for most commercial, personal projects, and for editorial use. You do not need to ask permission from or provide credit to the photographer or Unsplash, although it is appreciated when possible.">
+                Unsplash,</dfn> <a href="credit.html">here is credit</a> to them all.
         </p>
         <br>
         <br>
