--- a/credit.html
+++ b/credit.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>HiveMind-Photo Credits</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
+
 <body>
     <nav id="top" class="navbar">
         <section class="nav">
@@ -47,122 +49,122 @@
         <hr>
         <ul class="link-container">
             <li class="link-item"> <a class="tab-link" href="index.html"> Home</a> </li>
-            <li class="link-item"> <a class="tab-link" href="#"> Coffee</a> </li>
-            <li class="link-item"> <a class="tab-link" href="#"> Tea</a></li>
+            <li class="link-item"> <a class="tab-link" href="coffee.html"> Coffee</a> </li>
+            <li class="link-item"> <a class="tab-link" href="tea.html"> Tea</a></li>
             <li class="link-item"> <a class="tab-link" href="food.html"> Food </a></li>
         </ul>
     </nav>
     <!-- Nav End-->
     <br>
-        <div class="slideshow-container">
-            <div class="mySlides fade">
-                <div class="numbertext"> 1 / 20</div> 
-                <img src="img/Product/akhilesh-sharma.avif" style="width:100%">
-                <div class="text"> Akhilesh Sharma</div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext"> 2 / 20</div> 
-                <img src="img/Product/alina-karpenko@0.33x.avif" style="width:100%">
-                <div class="text">Alina Karpenko</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 3 / 20</div> 
-                <img src="img/Product/american-heritage@0.33x.avif" style="width:100%">
-                <div class="text">American Heritage Chocolate</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 4 / 20</div> 
-                <img src="img/Product/ann.avif" style="width:100%">
-                <div class="text"> Ann</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 5 / 20</div> 
-                <img src="img/Product/ari-spada.avif" style="width:100%">
-                <div class="text"> Ari Spada</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 6 / 20</div> 
-                <img src="img/Product//fallon-michael.avif" style="width:100%">
-                <div class="text"> Fallon Micheal</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 7 / 20</div> 
-                <img src="img/Product/gayatri-malhotra.avif" style="width:100%">
-                <div class="text"> Gayatri Malhorta</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 8 / 20</div> 
-                <img src="img/Product/joshua-flores.avif" style="width:100%">
-                <div class="text"> Joshua Flores</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 9 / 20</div> 
-                <img src="img/Product/karl-fredrickson.avif" style="width:100%">
-                <div class="text"> Karl Fredrickson</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 10 / 20</div> 
-                <img src="img/Product/madison-kaminski.avif" style="width:100%">
-                <div class="text"> Madison Kaminski</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 11 / 20</div> 
-                <img src="img/Product/manki-kim.avif" style="width:100%">
-                <div class="text"> Manki Kim</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 12 / 20</div> 
-                <img src="img/Product/michael-chiara.avif" style="width:100%">
-                <div class="text"> Micheal Chiara</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 13 / 20</div> 
-                <img src="img/Product/oriol-portell.avif" style="width:100%">
-                <div class="text"> Oriol Portell</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 14 / 20</div> 
-                <img src="img/Product/pablo-merchan-montes.avif" style="width:100%">
-                <div class="text"> Pablo Merchan Montes</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 15 / 20</div> 
-                <img src="img/Product/pexels-terrance-barksdale-8837096.avif" style="width:100%">
-                <div class="text"> Pexels Terrence Barksdale</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 16 / 20</div> 
-                <img src="img/Product/snapbythree.avif" style="width:100%">
-                <div class="text"> "SnapbytThree"</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 17 / 20</div> 
-                <img src="img/Product/steven-weeks.avif" style="width:100%">
-                <div class="text"> Steven Weeks</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 18 / 20</div> 
-                <img src="img/Product/tabitha-turner.avif" style="width:100%">
-                <div class="text"> Tabitha Turner</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 19 / 20</div> 
-                <img src="img/Product/valeriia-miller.avif" style="width:100%">
-                <div class="text"> Valeriia Miller</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 20 / 20</div> 
-                <img src="img/Product/yana.avif" style="width:100%">
-                <div class="text"> Yana</div>
-            </div>
-
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <div class="slideshow-container">
+        <div class="mySlides fade">
+            <div class="numbertext"> 1 / 20</div>
+            <img src="img/Product/akhilesh-sharma.avif" style="width:100%">
+            <div class="text"> Akhilesh Sharma</div>
         </div>
-        <br>
 
-        <div style="text-align: center;"> 
+        <div class="mySlides fade">
+            <div class="numbertext"> 2 / 20</div>
+            <img src="img/Product/alina-karpenko@0.33x.avif" style="width:100%">
+            <div class="text">Alina Karpenko</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 3 / 20</div>
+            <img src="img/Product/american-heritage@0.33x.avif" style="width:100%">
+            <div class="text">American Heritage Chocolate</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 4 / 20</div>
+            <img src="img/Product/ann.avif" style="width:100%">
+            <div class="text"> Ann</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 5 / 20</div>
+            <img src="img/Product/ari-spada.avif" style="width:100%">
+            <div class="text"> Ari Spada</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 6 / 20</div>
+            <img src="img/Product//fallon-michael.avif" style="width:100%">
+            <div class="text"> Fallon Micheal</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 7 / 20</div>
+            <img src="img/Product/gayatri-malhotra.avif" style="width:100%">
+            <div class="text"> Gayatri Malhorta</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 8 / 20</div>
+            <img src="img/Product/joshua-flores.avif" style="width:100%">
+            <div class="text"> Joshua Flores</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 9 / 20</div>
+            <img src="img/Product/karl-fredrickson.avif" style="width:100%">
+            <div class="text"> Karl Fredrickson</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 10 / 20</div>
+            <img src="img/Product/madison-kaminski.avif" style="width:100%">
+            <div class="text"> Madison Kaminski</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 11 / 20</div>
+            <img src="img/Product/manki-kim.avif" style="width:100%">
+            <div class="text"> Manki Kim</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 12 / 20</div>
+            <img src="img/Product/michael-chiara.avif" style="width:100%">
+            <div class="text"> Micheal Chiara</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 13 / 20</div>
+            <img src="img/Product/oriol-portell.avif" style="width:100%">
+            <div class="text"> Oriol Portell</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 14 / 20</div>
+            <img src="img/Product/pablo-merchan-montes.avif" style="width:100%">
+            <div class="text"> Pablo Merchan Montes</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 15 / 20</div>
+            <img src="img/Product/pexels-terrance-barksdale-8837096.avif" style="width:100%">
+            <div class="text"> Pexels Terrence Barksdale</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 16 / 20</div>
+            <img src="img/Product/snapbythree.avif" style="width:100%">
+            <div class="text"> "SnapbytThree"</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 17 / 20</div>
+            <img src="img/Product/steven-weeks.avif" style="width:100%">
+            <div class="text"> Steven Weeks</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 18 / 20</div>
+            <img src="img/Product/tabitha-turner.avif" style="width:100%">
+            <div class="text"> Tabitha Turner</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 19 / 20</div>
+            <img src="img/Product/valeriia-miller.avif" style="width:100%">
+            <div class="text"> Valeriia Miller</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 20 / 20</div>
+            <img src="img/Product/yana.avif" style="width:100%">
+            <div class="text"> Yana</div>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <div style="text-align: center;">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
@@ -186,40 +188,40 @@
     </div>
     <script>
         let slideIndex = 1;
-showSlides(slideIndex);
+        showSlides(slideIndex);
 
-// Next/previous controls
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
+        // Next/previous controls
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
 
-// Thumbnail image controls
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
+        // Thumbnail image controls
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
 
-function showSlides(n) {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-}
+        function showSlides(n) {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            let dots = document.getElementsByClassName("dot");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+        }
     </script>
-    
+
     <footer>
         <div class="footer-content">
             <img src="img/Logos/HivemindLogo.avif" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
-                
+
             </div>
         </div>
 
@@ -240,4 +242,5 @@ function showSlides(n) {
 
     </footer>
 </body>
+
 </html>
