--- a/food.html
+++ b/food.html
@@ -79,99 +79,99 @@
     </header>
     <!-- InstanceBeginEditable name="Content" -->
     <section class="cc">
-    <div class="row">
-        <div class="column card">
-            <img src="img/Product/alina-karpenko@0.33x.avif" alt="" style="width:100%">
-            <h1>Cinnamon Muffins</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
+        <div class="row">
+            <div class="column card">
+                <img src="img/Product/alina-karpenko@0.33x.avif" alt="" style="width:100%">
+                <h1>Cinnamon Muffins</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/american-heritage@0.33x.avif" alt="" style="width:100%">
+                <h1>Chocolate Cookies</h1>
+                <p class="price">$.99</p>
+                <p class="product-desc">Almonds Inside</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/ari-spada.avif" alt="" style="width:100%">
+                <h1> Chocolate Muffins</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/fallon-michael.avif" alt="" style="width:100%">
+                <h1>Cranberry Muffins</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
         </div>
-        <div class="column card">
-            <img src="img/Product/american-heritage@0.33x.avif" alt="" style="width:100%">
-            <h1>Chocolate Cookies</h1>
-            <p class="price">$.99</p>
-            <p class="product-desc">Almonds Inside</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/ari-spada.avif" alt="" style="width:100%">
-            <h1> Chocolate Muffins</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/fallon-michael.avif" alt="" style="width:100%">
-            <h1>Cranberry Muffins</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-    </div>
-    <div class="row">
+        <div class="row">
 
-        <div class="column card">
-            <img src="img/Product/gayatri-malhotra.avif" alt="" style="width:100%">
-            <h1>Sugar Cookies</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
+            <div class="column card">
+                <img src="img/Product/gayatri-malhotra.avif" alt="" style="width:100%">
+                <h1>Sugar Cookies</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/joshua-flores.avif" alt="" style="width:100%">
+                <h1> Blueberry Muffins</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/madison-kaminski.avif" alt="" style="width:100%">
+                <h1> PB Blossom</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">Chocolate Drops on a Peanut Butter Cookie</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/michael-chiara.avif" alt="" style="width:100%">
+                <h1> Chocolate Chip</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
         </div>
-        <div class="column card">
-            <img src="img/Product/joshua-flores.avif" alt="" style="width:100%">
-            <h1> Blueberry Muffins</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
+        <div class="row">
+            <div class="column card">
+                <img src="img/Product/steven-weeks.avif" alt="" style="width:100%">
+                <h1> Macarons</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/oriol-portell.avif" alt="" style="width:100%">
+                <h1>Chocolate Muffins</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">Double Chocolate</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+            <div class="column card">
+                <img src="img/Product/pexels-terrance-barksdale-8837096.avif" alt="" style="width:100%">
+                <h1 class="product-desc"> Oatmeal Raisin</h1>
+                <p class="price">$1.99</p>
+                <p class="product-desc">...</p>
+                <p><button>Add to Cart</button></p>
+            </div>
         </div>
-        <div class="column card">
-            <img src="img/Product/madison-kaminski.avif" alt="" style="width:100%">
-            <h1> PB Blossom</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">Chocolate Drops on a Peanut Butter Cookie</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/michael-chiara.avif" alt="" style="width:100%">
-            <h1> Chocolate Chip</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column card">
-            <img src="img/Product/steven-weeks.avif" alt="" style="width:100%">
-            <h1> Macarons</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/oriol-portell.avif" alt="" style="width:100%">
-            <h1>Chocolate Muffins</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">Double Chocolate</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/pexels-terrance-barksdale-8837096.avif" alt="" style="width:100%">
-            <h1 class="product-desc"> Oatmeal Raisin</h1>
-            <p class="price">$1.99</p>
-            <p class="product-desc">...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-    </div>
-    
-</section>
+
+    </section>
     <!-- InstanceEndEditable -->
     <footer>
         <div class="footer-content">
             <img src="img/Logos/HivemindLogo.avif" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
                 <ul class="category">
-                   
+
                 </ul>
             </div>
         </div>
@@ -186,7 +186,9 @@
             <a href="#top" class="social-link"> Back To Top</a>
         </div>
         <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022. All images were
-            found on<dfn title="The photos on Unsplash are free to use and can be used for most commercial, personal projects, and for editorial use. You do not need to ask permission from or provide credit to the photographer or Unsplash, although it is appreciated when possible."> Unsplash,</dfn> <a href="credit.html">here is credit</a> to them all.
+            found on<dfn
+                title="The photos on Unsplash are free to use and can be used for most commercial, personal projects, and for editorial use. You do not need to ask permission from or provide credit to the photographer or Unsplash, although it is appreciated when possible.">
+                Unsplash,</dfn> <a href="credit.html">here is credit</a> to them all.
         </p>
         <br>
         <br>
