--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <!-- Weeks Top End-->
     <hr>
     <hr class="footer-collection">
-    <section class="collection-container">
+    <div class="collection-container">
         <a href="coffee.html" class="collection">
             <dfn title="Coffee">
                 <img src="img/Product/tabitha-turner.avif" alt="Coffee"></dfn>
@@ -252,9 +252,8 @@
             <dfn title="Beans">
                 <img src="img/Product/pablo-merchan-montes.avif" alt="Beans"></dfn>
         </a>
-        <a href="#" class="collection" alt="Empty">
+        <a href="#" class="collection">
         </a>
-    </section>
     </div>
 
     <footer>
