--- a/credit.html
+++ b/credit.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiveMind-Photo Credits</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -59,103 +60,103 @@
     <div class="slideshow-container">
         <div class="mySlides fade">
             <div class="numbertext"> 1 / 20</div>
-            <img src="img/Product/akhilesh-sharma.avif" style="width:100%">
+            <img src="img/Product/akhilesh-sharma.avif"  alt=" Black Tea" style="width:100%">
             <div class="text"> Akhilesh Sharma</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext"> 2 / 20</div>
-            <img src="img/Product/alina-karpenko@0.33x.avif" style="width:100%">
+            <img src="img/Product/alina-karpenko@0.33x.avif" alt="Cinnamon Muffins" style="width:100%">
             <div class="text">Alina Karpenko</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 3 / 20</div>
-            <img src="img/Product/american-heritage@0.33x.avif" style="width:100%">
+            <img src="img/Product/american-heritage@0.33x.avif" alt="Chocolate Almond Cookies" style="width:100%">
             <div class="text">American Heritage Chocolate</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 4 / 20</div>
-            <img src="img/Product/ann.avif" style="width:100%">
+            <img src="img/Product/ann.avif" alt="Matcha Tea" style="width:100%">
             <div class="text"> Ann</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 5 / 20</div>
-            <img src="img/Product/ari-spada.avif" style="width:100%">
+            <img src="img/Product/ari-spada.avif" alt="Chocolate Muffins" style="width:100%">
             <div class="text"> Ari Spada</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 6 / 20</div>
-            <img src="img/Product//fallon-michael.avif" style="width:100%">
+            <img src="img/Product//fallon-michael.avif" alt="Cranberry Muffins" style="width:100%">
             <div class="text"> Fallon Micheal</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 7 / 20</div>
-            <img src="img/Product/gayatri-malhotra.avif" style="width:100%">
+            <img src="img/Product/gayatri-malhotra.avif"  alt="Sugar Cookies" style="width:100%">
             <div class="text"> Gayatri Malhorta</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 8 / 20</div>
-            <img src="img/Product/joshua-flores.avif" style="width:100%">
+            <img src="img/Product/joshua-flores.avif" alt="Blueberry Muffins" style="width:100%">
             <div class="text"> Joshua Flores</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 9 / 20</div>
-            <img src="img/Product/karl-fredrickson.avif" style="width:100%">
+            <img src="img/Product/karl-fredrickson.avif" alt="Coffee Brewing" style="width:100%">
             <div class="text"> Karl Fredrickson</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 10 / 20</div>
-            <img src="img/Product/madison-kaminski.avif" style="width:100%">
+            <img src="img/Product/madison-kaminski.avif"  alt="PB Blossom Cookies" style="width:100%">
             <div class="text"> Madison Kaminski</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 11 / 20</div>
-            <img src="img/Product/manki-kim.avif" style="width:100%">
+            <img src="img/Product/manki-kim.avif"  alt="Sweet Tea" style="width:100%">
             <div class="text"> Manki Kim</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 12 / 20</div>
-            <img src="img/Product/michael-chiara.avif" style="width:100%">
+            <img src="img/Product/michael-chiara.avif"  alt="Chocolate Chip Muffins" style="width:100%">
             <div class="text"> Micheal Chiara</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 13 / 20</div>
-            <img src="img/Product/oriol-portell.avif" style="width:100%">
+            <img src="img/Product/oriol-portell.avif"  alt=" Double Chocolate Muffins" style="width:100%">
             <div class="text"> Oriol Portell</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 14 / 20</div>
-            <img src="img/Product/pablo-merchan-montes.avif" style="width:100%">
+            <img src="img/Product/pablo-merchan-montes.avif"  alt=" Beans" style="width:100%">
             <div class="text"> Pablo Merchan Montes</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 15 / 20</div>
-            <img src="img/Product/pexels-terrance-barksdale-8837096.avif" style="width:100%">
+            <img src="img/Product/pexels-terrance-barksdale-8837096.avif"  alt="Oatmeal Raisin Coiokies" style="width:100%">
             <div class="text"> Pexels Terrence Barksdale</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 16 / 20</div>
-            <img src="img/Product/snapbythree.avif" style="width:100%">
+            <img src="img/Product/snapbythree.avif"  alt="Black Coffee" style="width:100%">
             <div class="text"> "SnapbytThree"</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 17 / 20</div>
-            <img src="img/Product/steven-weeks.avif" style="width:100%">
+            <img src="img/Product/steven-weeks.avif"  alt="Macarons" style="width:100%">
             <div class="text"> Steven Weeks</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 18 / 20</div>
-            <img src="img/Product/tabitha-turner.avif" style="width:100%">
+            <img src="img/Product/tabitha-turner.avif"  alt="Cold Brew" style="width:100%">
             <div class="text"> Tabitha Turner</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 19 / 20</div>
-            <img src="img/Product/valeriia-miller.avif" style="width:100%">
+            <img src="img/Product/valeriia-miller.avif" alt="Latte" style="width:100%">
             <div class="text"> Valeriia Miller</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext"> 20 / 20</div>
-            <img src="img/Product/yana.avif" style="width:100%">
+            <img src="img/Product/yana.avif" alt="Tea" style="width:100%">
             <div class="text"> Yana</div>
         </div>
 
